<resources>
    <string name="app_name">EazyDine</string>
    <string name="splash_message">Because everyone likes \nhome made food</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openDrawer">Drawer open</string>
    <string name="closeDrawer">Drawer close</string>
    <string name="hint_home_search">Search Restaurants</string>
    <string name="label_order">Tap 2 Dine</string>
    <string name="label_restaurants">Restaurants near you</string>
    <string name="rs">"$"</string>
    <string name="cart_title">Your cart</string>
    <string name="pay_title">Make Payment</string>
    <string name="search_title">Search</string>
    <string name="label_refine">Refine</string>
    <string name="refine_reset_title">Reset</string>
    <string name="label_cart">Cart</string>
    <string name="label_support">Contact us</string>
    <string name="label_reviews">My reviews</string>
    <string name="date">10\nMay</string>
    <string name="label_restaurant_menu">Menu</string>
    <string name="share">Share</string>
    <string name="sample_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="cod_message">Be ready with enough cash when our delivery guy visits your place</string>
    <string name="online_counter">Online, counter</string>
    <string name="payment_mode">Payment mode</string>
    <string name="_10">$10</string>
    <string name="min_order">Min order</string>
    <string name="_45_mins">45 mins</string>
    <string name="avg_delivery">Avg. delivery</string>
    <string name="chinese_food_south_indian_food">Chinese food, south indian food</string>
    <string name="golden_fusion_china_chef">Golden fusion china chef</string>
    <string name="_4_8">4.8</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO2</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="group_name">Group Name</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="place1">Place</string>
    <string name="subtotal1">Subtotal:</string>
    <string name="service_charge">Service charge:</string>
    <string name="reorder">Reorder</string>
    <string name="preparing1">Preparing</string>
    <string name="add_group">Add Group</string>
    <string name="add_user">Add User</string>
</resources>
