<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/rest_height">

            <ImageView
                android:id="@+id/restRes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/rest_res_1"
                android:contentDescription="@string/todo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp8">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/restName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dp8"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/golden_fusion_china_chef"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/restDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/chinese_food_south_indian_food"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>