<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.eazydineapp.fragment.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp8"
            android:paddingRight="@dimen/dp8">

            <EditText
                android:id="@+id/search_tab"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/dp8"
                android:layout_marginRight="@dimen/dp8"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/round_white"
                android:drawableStart="@drawable/ic_search_gray_24dp"
                android:drawableLeft="@drawable/ic_search_gray_24dp"
                android:drawablePadding="@dimen/dp8"
                android:hint="@string/hint_home_search"
                android:inputType=""
                android:maxLines="1"
                android:paddingStart="@dimen/dp8"
                android:paddingLeft="@dimen/dp8"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

            <FrameLayout
                android:id="@+id/refine"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/round_white">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_tune_gray_24dp"
                    android:contentDescription="@string/todo2" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="@dimen/dp4"
            android:paddingTop="@dimen/dp4"
            android:text="@string/label_order"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/nfcTag"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/nfc"
            android:clickable="true"/>
    </LinearLayout>

</LinearLayout>
